Change the imagePullPolicy to IfNotPresent

--- a/appsody-service.yaml
+++ b/appsody-service.yaml
@@ -9,6 +9,6 @@ spec:
         spec:
           container:
             image: dev.local/tekton-pipeline-testing
-            imagePullPolicy: Never
+            imagePullPolicy: IfNotPresent
             ports:
             - containerPort: 3000
